Fix: issue in seat icon visibility and removed a few unwanted types

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,6 @@ rect.workspace-selection {
   fill-opacity: 0.5;
 }
 
-.stk-core svg * {
+.stk-core svg *:not(.stk-seat-icon *) {
   transform-box: fill-box;
 }
